# claudio

./: .env.example  .gitignore  QUICKSTART.md  README.md  __init__.py  config.py  main.py  mcp_server.py  pyproject.toml  requirements.txt
.claude/skills/video-director/: README.md  SKILL.md  example.py
agents/: production_orchestrator.py  scene_planner.py
api_clients/: base_client.py  nano_banana_client.py  veo_client.py
claudio/: config.py
claudio/agents/: production_orchestrator.py  scene_planner.py
claudio/api_clients/: base_client.py  nano_banana_client.py  veo_client.py
claudio/mcp_server/: server.py  tools.py
claudio/models/: scene.py  workflow_state.py
claudio/utils/: async_utils.py  file_manager.py  state_manager.py
models/: scene.py  workflow_state.py
tools/: tools.py
utils/: file_manager.py  state_manager.py
