[tool.poetry]
name = "claudio"
version = "0.1.0"
description = "AI-powered video generation system using Claude Agent SDK, Google Veo 3, and Nano Banana"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "claudio"}]

[tool.poetry.dependencies]
python = "^3.11"

# Claude Agent SDK
anthropic = "^0.40.0"

# Google AI APIs
google-generativeai = "^0.8.0"
google-cloud-aiplatform = "^1.70.0"

# Async support
aiohttp = "^3.11.0"
httpx = "^0.28.0"
aiofiles = "^24.1.0"

# MCP SDK
mcp = "^1.3.0"

# Video processing
ffmpeg-python = "^0.2.0"

# Data validation
pydantic = "^2.10.0"

# File handling
Pillow = "^11.1.0"

# Utilities
python-dotenv = "^1.0.0"
typer = "^0.15.0"
rich = "^13.9.0"

# Logging
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
